--- a/app/views/start.njk
+++ b/app/views/start.njk
@@ -63,12 +63,12 @@
           <ul class="govuk-list govuk-!-font-size-16">
             <li>
               <a class="govuk-link" href="#">
-                Related link
+                Related link 1
               </a>
             </li>
             <li>
               <a class="govuk-link" href="#">
-                Related link
+                Related link 2
               </a>
             </li>
             <li>
